# nefeli-core

./: .gitmodules  Dockerfile  README.md  external.sh
src/: cryptonote_config.h
src/blockchain_db/lmdb/: db_lmdb.cpp
src/cryptonote_basic/: cryptonote_basic_impl.cpp
src/cryptonote_protocol/: cryptonote_protocol_handler.inl
src/daemon/: CMakeLists.txt  command_parser_executor.cpp  generate_genesis_tx.cpp  main.cpp  rpc_command_executor.cpp
src/p2p/: net_node.inl
src/simplewallet/: CMakeLists.txt  simplewallet.cpp
src/wallet/: CMakeLists.txt  wallet_rpc_server.cpp
utils/conf/: nefeli.conf
utils/systemd/: nefelid.service
